--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "city-explorer-api",
   "version": "1.0.0",
-  "description": "",
-  "main": "Weather.js",
+  "description": "**Author**: Roaa Mustafa  **Version**: 1.0.0",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"node server.js"
+
   },
   "repository": {
     "type": "git",
@@ -21,5 +23,6 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1"
-  }
+  },
+  "devDependencies": {}
 }
